Day-2/tls-101/ingress-update.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  tls:
    - secretName: example-com-tls
      hosts:
        - example.com
  rules:
    - host: example.com
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
