Day-2/tls-101/ingress.yaml
---
apiVersion: extensions/vibeta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: example.com
      http:
        paths:
          backend:
            serviceName: nginx
            servicePort: 80
